packages/CodeStyle/Annotate/tests/valid/PhpDocMethodParametersName.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @param  string
	 */
	public function foo($foo)
	{
	}



	/**
	 * @param  callable ($bar)
	 */
	public function bar(callable $foo)
	{
	}

}
