packages/CodeStyle/Annotate/tests/invalid/PhpDocMethodParametersWhitespace.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @param string
	 */
	public function foo($foo)
	{
	}

}
